@@ -1,3 +1,4 @@
 DIST riddle-1.5.6.gem 2037248 SHA256 e31b362de20ff84226309fdbd6b70bc9de45b096eb25de8a4d4eeb2af52a90ae SHA512 265e74134e9ed3290160ac44f4c7c63821bb9795475527ca4ff42b165f31610f4563d9c672b6b8fb1c9d5e3f115b13ad5ceeec6e382af437ba9659c95cbbb6ca WHIRLPOOL 3f2073ec6fd593a753cd333263d6414fe34901c4e14e95783164802794ce84197382b7ec839346d49a71edabcd54e3be519aa12b8ee38227d5fb1a234aa8c7fe
 DIST riddle-1.5.7.gem 2037760 SHA256 8d73852df1c291247cf252eaeb325355877736d37cfb1d3432503e11e8526cec SHA512 29d6ca43d3a2bdaec479ee3e65ae10c62b95dcae5890b0e4802608b9d495b46cca1830dcb27ff3f00a761c25662f386f387640ec98e522d0eff4e9e8ec72187c WHIRLPOOL 66c1a6f4c5702460bf80ca5823e4d597ef81ae32479fcb49af7f3c1034a77f2de3b1c68cade0f324ee22c5b2f8c7a95ca631931160621df3a29c161bc7eee5fe
 DIST riddle-1.5.8.gem 2038272 SHA256 c44ccac5edd8d0d58aeba71dbb122cb9a49f311fc1f09c4a3bc214d736834d28 SHA512 78973636957eb78665f226705afe302a27708f205a6680086a57bd72e26de37a9827fb2327b1e0ca5f4942e2860d31a84d8348de4432b8b4bbe51dccb317d446 WHIRLPOOL f35dcf8bb3a4f1b7bcf678bc08d0ca5db9d9c5242b5e99bd4db6b60e135aaa5f2924b2c3f1af9d9ca8c47ef597ff208583ff7971adfc24bbe9e99e0e2168eb9e
+DIST riddle-1.5.9.gem 1978880 SHA256 1419b988bf3738cffefad1a2d21c13e1691b8513dcce6f16c2988ff2d1ce4db3 SHA512 26b55ce5573ee735cfae515c89a2f9445f4a9630bb3815053940649080f086122260d3a9a6bc886553d28bd6ebdf58d0b9795501c97aed85444f95c3fae02079 WHIRLPOOL 40a883b5d717334a960995edfbd2adfa53536b88c1da9dabd71eaa9fe1ef50a45423457b242ad283ab967985765d0d6d489b592580cf36e10c77a813184c8f9a
