@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*riddle-1.5.9 (27 Nov 2013)
+
+  27 Nov 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.9.ebuild:
+  Version bump.
+
 *riddle-1.5.8 (13 Sep 2013)
 
   13 Sep 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.8.ebuild:
